<resources>
    <string name="app_name">MRIM</string>
    <string name="login_name_hint">phone/email/accounts</string>
    <string name="login_pass_hint">password</string>
    <string name="login_button">SIGN UP</string>
    <string name="login_sign_in">SIGN IN</string>
    <string name="login_sign_reqpass">Confirm password</string>
    <string name="Invitation_code">Invitation code</string>
</resources>
