<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/sign_in_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:scaleType="center"
        android:src="@drawable/sign_in_title" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/sign_in_image"
        android:background="@color/white">

        <EditText
            android:id="@+id/sign_in_name"
            style="@style/editText_defual"
            android:layout_marginTop="10dp"
            android:hint="@string/login_name_hint" />

        <EditText
            android:inputType="textPassword"
            android:id="@+id/sign_in_pass"
            style="@style/editText_defual"
            android:layout_below="@+id/sign_in_name"
            android:layout_marginTop="10dp"
            android:hint="@string/login_pass_hint" />


        <EditText
            android:inputType="textPassword"
            android:id="@+id/sign_in_reqpass"
            style="@style/editText_defual"
            android:layout_below="@+id/sign_in_pass"
            android:layout_marginTop="10dp"
            android:hint="@string/login_sign_reqpass" />

        <EditText
            android:id="@+id/in_code"
            style="@style/editText_defual"
            android:layout_width="150dp"
            android:layout_below="@+id/sign_in_reqpass"
            android:layout_marginTop="10dp"
            android:hint="@string/Invitation_code" />
        <TextView
            android:textColor="#fc020a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/in_code" />

        <Button
            android:id="@+id/sign_in_but"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/in_code"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/ok_button_select" />

        <Button
            android:id="@+id/sign_in_cancle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/in_code"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/no_button_select" />

    </RelativeLayout>


</RelativeLayout>